sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: '=' expected but ';' found.
while (chgt == 0) {
^